force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/RPO_Plant_Program_Code_Mapping__c/RPO_Plant_Program_Code_Mapping__c.object-meta.xml
<CustomObject>
    <label>RPO-Plant Program Code Mapping</label>
    <nameField>
        <displayFormat>RPPC-{000000}</displayFormat>
        <label>RPO-Plant Program Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RPO-Plant Program Code Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>