force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/RPO_Plant_Program_Code_Mapping__c/fields/M_Schedule_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>M_Schedule_Product_Type__c</fullName>
    <description>PR1064302-482 - This field will hold the Product Type values of records from M-Schedule GPS file. Mule will be using this field to map the M-Schedule product type and aggregate values for Salesforce Product Type.</description>
    <label>M-Schedule Product Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>