force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/RPO_Plant_Program_Code_Mapping__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Plant__c.Auth_Sector__c</field>
            <operation>equals</operation>
            <value>GPS</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>RPO-Plant Program Code Mappings</relationshipLabel>
    <relationshipName>RPO_Plant_Program_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>