force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/RPO_Plant_Program_Code_Mapping__c/fields/Plant_Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Plant_Program_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Program Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Plant__c</field>
            <operation>equals</operation>
            <valueField>Program_Master__c.Plant_Name__c</valueField>
        </filterItems>
        <filterItems>
            <field>Program_Master__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Program_Code</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program_Master__c</referenceTo>
    <relationshipLabel>RPO-Plant Program Code Mappings</relationshipLabel>
    <relationshipName>RPO_Plant_Program_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>