force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/RPO_Plant_Program_Code_Mapping__c/fields/RPO__c.field-meta.xml
<CustomField>
    <fullName>RPO__c</fullName>
    <label>RPO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>